--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/weisjohn/pdfs/issues"
   },
-  "homepage": "https://github.com/weisjohn/pdfs#readme"
+  "homepage": "https://github.com/weisjohn/pdfs#readme",
+  "dependencies": {
+    "phantomjs-prebuilt": "^2.1.15"
+  }
 }
